# jamma64

./: .gitignore  CMakeLists.txt  PROJECT.md  README.md  THIRD_PARTY_NOTICES.md  build.sh  lwipopts.h
build-mc/: CMakeCache.txt
content/: api.shtml  index.shtml  index_bk.shtml  wiring.shtml
content/img/: capcom_2p_layout_lineart_hover.svgz  controller_clickable_jamma64_v6.svgz  controller_clickable_jamma64_v8.svgz
hardware/interposer/: JAMMA_Interposer.kicad_pro  JAMMA_Interposer.kicad_sch  fp-lib-table  sym-lib-table
scripts/: flash_and_wifi.ps1  flash_and_wifi.sh
src/: event_log.c  event_log.h  inputs.c  inputs.h  main.c  mapping_store.c  mapping_store.h  n64.c  n64.h  n64_io.pio  n64_joybus.cpp  n64_rx.pio  n64_tx.pio  n64_virtual.c  n64_virtual.h  profile.c  profile.h  tusb_config.h  usb_descriptors.c  usb_msc.c  usb_msc.h  web.c  web.h  wifi_config.c  wifi_config.h
